--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,8 +1,9 @@
 name: yes24_crawler
 
 on:
-  schedule:
-    - cron: '0 0 * * *'
+  push:
+  # schedule:
+  #   - cron: '0 0 * * *'
 
 jobs:
   build:
